Fixed blog mini slider title alignment and added link tag to their own post

--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -1424,7 +1424,8 @@ footer{
                 color: $ultra-dark-grey;
                 font-style: italic;  
                 font-weight: bold;
-                margin-bottom: 20px;          
+                margin-bottom: 5px;    
+                min-height: 100px;      
             }
             &-desc{
                 color: $grey;
